[gd_scene load_steps=21 format=3 uid="uid://dqpe1g7iuxxb6"]

[ext_resource type="Script" path="res://scripts/node_script.gd" id="1_f3slk"]
[ext_resource type="Texture2D" uid="uid://ca4nfp2xrhrs7" path="res://images/bg.png" id="2_1g5au"]
[ext_resource type="FontFile" uid="uid://de7sw3fmkkjp6" path="res://fonts/font.woff2" id="2_smvxa"]
[ext_resource type="Script" path="res://scripts/bomb.gd" id="3_deole"]
[ext_resource type="Texture2D" uid="uid://7lq73s1wqj6n" path="res://images/arrow.png" id="3_kpfkf"]
[ext_resource type="Texture2D" uid="uid://bj143g6v2fgm3" path="res://images/bomb.png" id="3_xv3jk"]
[ext_resource type="AudioStream" uid="uid://b15kndhak0ns" path="res://sfx/selfTurn.wav" id="6_dbc40"]
[ext_resource type="FontFile" uid="uid://c0ivdjb6vr6ag" path="res://fonts/round_font.woff2" id="7_rmfhc"]
[ext_resource type="AudioStream" uid="uid://cye5kv4r66p75" path="res://sfx/failWord_alreadyUsed.wav" id="8_jliks"]
[ext_resource type="AudioStream" uid="uid://dqruk4nvlguje" path="res://sfx/ignite.wav" id="10_j00fr"]
[ext_resource type="AudioStream" uid="uid://dtwl52v6ujftd" path="res://sfx/fail.wav" id="11_0syhh"]
[ext_resource type="AudioStream" uid="uid://ct1xh1ibtm4t7" path="res://sfx/correct.wav" id="12_ae3pi"]
[ext_resource type="AudioStream" uid="uid://bsi1lmtf7jpod" path="res://sfx/type.wav" id="12_t4oya"]
[ext_resource type="AudioStream" uid="uid://cqfsr8mxhpj53" path="res://sfx/tick.wav" id="13_bewgs"]
[ext_resource type="Script" path="res://scripts/char_requester.gd" id="14_ovr1s"]
[ext_resource type="Script" path="res://scripts/settings.gd" id="14_pnikj"]
[ext_resource type="Script" path="res://scripts/word_checker.gd" id="15_o372y"]

[sub_resource type="LabelSettings" id="LabelSettings_47wc6"]
font = ExtResource("7_rmfhc")
font_size = 31

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_pljb2"]

[sub_resource type="LabelSettings" id="LabelSettings_8yxqq"]
font = ExtResource("2_smvxa")
font_size = 21
font_color = Color(0.473976, 0.473976, 0.473976, 1)

[node name="Node2D" type="Node2D"]
script = ExtResource("1_f3slk")

[node name="Bg" type="Sprite2D" parent="."]
z_index = -2
position = Vector2(576.023, 324)
scale = Vector2(0.450158, 0.450313)
texture = ExtResource("2_1g5au")

[node name="Bomb" type="Sprite2D" parent="."]
position = Vector2(576, 320)
texture = ExtResource("3_xv3jk")
script = ExtResource("3_deole")

[node name="Arrow" type="Sprite2D" parent="Bomb"]
z_index = -1
rotation = 1.5708
texture = ExtResource("3_kpfkf")

[node name="ignite" type="AudioStreamPlayer" parent="Bomb"]
stream = ExtResource("10_j00fr")

[node name="tick" type="AudioStreamPlayer" parent="Bomb"]
stream = ExtResource("13_bewgs")
volume_db = -8.432

[node name="Label" type="Label" parent="Bomb"]
offset_left = -64.0
offset_top = -36.0
offset_right = 64.0
offset_bottom = 36.0
text = "..."
label_settings = SubResource("LabelSettings_47wc6")
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2

[node name="LineEdit" type="LineEdit" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 394.0
offset_top = 588.0
offset_right = 758.0
offset_bottom = 619.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
theme_override_styles/focus = SubResource("StyleBoxEmpty_pljb2")
alignment = 1
expand_to_text_length = true
context_menu_enabled = false
flat = true

[node name="type" type="AudioStreamPlayer" parent="LineEdit"]
stream = ExtResource("12_t4oya")
volume_db = -8.432

[node name="score" type="Label" parent="."]
offset_left = 394.0
offset_top = 619.0
offset_right = 650.0
offset_bottom = 645.0
text = "Po√§ng: 0"
label_settings = SubResource("LabelSettings_8yxqq")
autowrap_mode = 2

[node name="Settings" type="Node" parent="."]
script = ExtResource("14_pnikj")

[node name="CharRequester" type="Node" parent="."]
script = ExtResource("14_ovr1s")

[node name="new_char" type="HTTPRequest" parent="CharRequester"]

[node name="selfTurn" type="AudioStreamPlayer" parent="CharRequester"]
stream = ExtResource("6_dbc40")
volume_db = -7.466

[node name="WordChecker" type="Node" parent="."]
script = ExtResource("15_o372y")

[node name="saol" type="HTTPRequest" parent="WordChecker"]
use_threads = true
max_redirects = 1

[node name="so" type="HTTPRequest" parent="WordChecker"]
use_threads = true
max_redirects = 1

[node name="saob" type="HTTPRequest" parent="WordChecker"]
use_threads = true
max_redirects = 1

[node name="correct" type="AudioStreamPlayer" parent="WordChecker"]
stream = ExtResource("12_ae3pi")

[node name="fail" type="AudioStreamPlayer" parent="WordChecker"]
stream = ExtResource("11_0syhh")

[node name="failWord_alreadyUsed" type="AudioStreamPlayer" parent="WordChecker"]
stream = ExtResource("8_jliks")

[connection signal="text_submitted" from="LineEdit" to="." method="_on_line_edit_text_submitted"]
[connection signal="request_completed" from="CharRequester/new_char" to="CharRequester" method="_on_new_char_request_completed"]
[connection signal="request_completed" from="WordChecker/saol" to="WordChecker" method="_on_http_request_request_completed"]
[connection signal="request_completed" from="WordChecker/so" to="WordChecker" method="_on_so_request_completed"]
[connection signal="request_completed" from="WordChecker/saob" to="WordChecker" method="_on_saob_request_completed"]
